+ Updated more fields to new configuration layout (now about 2/3 done), added support for dependency attributes in XML parameter files, the non-appicable parameters can be hidden, now this is used only in "groupmarker" field (Form Tabs/Fieldset/Custom HTML)

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -424,7 +424,6 @@ FLEXI_COUNT_TEMPLATES="%s elements"
 FLEXI_DUPLICATE="Copy"
 FLEXI_DUPLICATE_TEMPLATE="Duplicate template"
 FLEXI_DUPLICATE_TEMPLATE_DESC="Please choose a name for the template copy"
-FLEXI_REMOVE="Remove"
 FLEXI_REMOVE_TEMPLATE="Remove template"
 FLEXI_DUPLICATE_TEMPLATE_BUTTON="Duplicate"
 FLEXI_TEMPLATE_DELETED="The template folder %s was successfully deleted."
@@ -1184,6 +1183,8 @@ FLEXI_CURRENT_VERSION="Current version"
 FLEXI_WORKING_VERSION="Working version"
 FLEXI_APPROVE_VERSION="Approve version"
 FLEXI_VERSION_COMMENT="Version comment"
+FLEXI_VERSIONS="Versions"
+FLEXI_VERSION_INFO="Version information"
 FLEXI_AUTO_APPROVE="Auto-approve versions"
 FLEXI_AUTO_APPROVE_DESC="Disable advanced versioning and auto-approve newly created versions so that they are automatically current"
 FLEXI_VERSION_PER_PAGE="# versions per page"
@@ -2442,8 +2443,8 @@ FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <sma
 FLEXI_CLICK_TO_TOGGLE="click to toggle"
 FLEXI_TOGGLE_TEXT_SEARCHABLE="Text Search"
 FLEXI_TOGGLE_FILTERABLE="Filter"
-FLEXI_TOGGLE_ADV_TEXT_SEARCHABLE="(ADV) Text Search"
-FLEXI_TOGGLE_ADV_FILTERABLE="(ADV) Filter"
+FLEXI_TOGGLE_ADV_TEXT_SEARCHABLE="Text Search <small>(search view)</small>"
+FLEXI_TOGGLE_ADV_FILTERABLE="Filter <small>(search view)</small>"
 FLEXI_FIELD_BASIC_INDEX_PROPERTY_DIRTY="Dirty (please rebuild basic search indexed)"
 FLEXI_FIELD_ADVANCED_INDEX_PROPERTY_DIRTY="Dirty (please rebuild advanced search indexed)"
 FLEXI_PROPERTY_NOT_SUPPORTED="Property not supported"
@@ -3113,3 +3114,5 @@ FLEXI_NAV_SD_CONTENT_VIEWING="Content viewing"
 FLEXI_NAV_SD_TYPES_N_FIELDS="Types & fields"
 FLEXI_NAV_SD_USERS_N_GROUPS="Users & Groups"
 FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
+
+FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
